--- a/card/ledger/index.html
+++ b/card/ledger/index.html
@@ -17,16 +17,19 @@
   <meta property="og:url" content="https://spendbase.cards/card/ledger/">
   <meta property="og:title" content="Ledger Crypto Card Review | TBD Cashback">
   <meta property="og:description" content="Ledger is a onchain crypto card offering TBD cashback in TBD. Self-custody solution on Multi-chain with 0% FX fees.">
-  <meta property="og:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/0c2703c2-09d1-4394-8d3f-aa84bfc95300/public">
+  
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@spaboravez">
+  
+  <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/ledger/">
   <meta name="twitter:title" content="Ledger Crypto Card Review | TBD Cashback">
   <meta name="twitter:description" content="Ledger is a onchain crypto card offering TBD cashback in TBD. Self-custody solution on Multi-chain with 0% FX fees.">
-  <meta name="twitter:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/0c2703c2-09d1-4394-8d3f-aa84bfc95300/public">
+  <meta property="og:image" content="https://spendbase.cards/og/card/ledger.png">
+  <meta name="twitter:image" content="https://spendbase.cards/og/card/ledger.png">
+  <meta name="twitter:card" content="summary_large_image">
+  
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -431,7 +434,7 @@
         <div>
           <h4 class="font-semibold mb-3">Community</h4>
           <ul class="space-y-2 text-sm text-gray-400">
-            <li><a href="https://x.com/spaboravez" target="_blank" class="hover:text-white">Twitter</a></li>
+            <li><a href="https://x.com/spendbasecards" target="_blank" class="hover:text-white">Twitter</a></li>
             <li><a href="https://t.me/SpendbaseCards" target="_blank" class="hover:text-white">Telegram</a></li>
           </ul>
         </div>
