--- a/card/ready/index.html
+++ b/card/ready/index.html
@@ -17,16 +17,19 @@
   <meta property="og:url" content="https://spendbase.cards/card/ready/">
   <meta property="og:title" content="Ready Crypto Card Review | 0.5-3% Cashback">
   <meta property="og:description" content="Ready is a onchain crypto card offering 0.5-3% cashback in STRK. Self-custody solution on Starknet with 0% FX fees.">
-  <meta property="og:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/04d75186-a574-4a06-c8de-2b1428b63600/public">
+  
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@spaboravez">
+  
+  <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/ready/">
   <meta name="twitter:title" content="Ready Crypto Card Review | 0.5-3% Cashback">
   <meta name="twitter:description" content="Ready is a onchain crypto card offering 0.5-3% cashback in STRK. Self-custody solution on Starknet with 0% FX fees.">
-  <meta name="twitter:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/04d75186-a574-4a06-c8de-2b1428b63600/public">
+  <meta property="og:image" content="https://spendbase.cards/og/card/ready.png">
+  <meta name="twitter:image" content="https://spendbase.cards/og/card/ready.png">
+  <meta name="twitter:card" content="summary_large_image">
+  
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -418,7 +421,7 @@
         <div>
           <h4 class="font-semibold mb-3">Community</h4>
           <ul class="space-y-2 text-sm text-gray-400">
-            <li><a href="https://x.com/spaboravez" target="_blank" class="hover:text-white">Twitter</a></li>
+            <li><a href="https://x.com/spendbasecards" target="_blank" class="hover:text-white">Twitter</a></li>
             <li><a href="https://t.me/SpendbaseCards" target="_blank" class="hover:text-white">Telegram</a></li>
           </ul>
         </div>
