--- a/card/solayer-emerald/index.html
+++ b/card/solayer-emerald/index.html
@@ -17,16 +17,19 @@
   <meta property="og:url" content="https://spendbase.cards/card/solayer-emerald/">
   <meta property="og:title" content="Solayer Emerald Crypto Card Review | 2-4% Cashback">
   <meta property="og:description" content="Solayer Emerald is a onchain crypto card offering 2-4% cashback in LAYER. Self-custody solution on Solana with 0% FX fees.">
-  <meta property="og:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/25f81335-2e88-40f2-a5b6-02ffc34a6100/public">
+  
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@spaboravez">
+  
+  <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/solayer-emerald/">
   <meta name="twitter:title" content="Solayer Emerald Crypto Card Review | 2-4% Cashback">
   <meta name="twitter:description" content="Solayer Emerald is a onchain crypto card offering 2-4% cashback in LAYER. Self-custody solution on Solana with 0% FX fees.">
-  <meta name="twitter:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/25f81335-2e88-40f2-a5b6-02ffc34a6100/public">
+  <meta property="og:image" content="https://spendbase.cards/og/card/solayer-emerald.png">
+  <meta name="twitter:image" content="https://spendbase.cards/og/card/solayer-emerald.png">
+  <meta name="twitter:card" content="summary_large_image">
+  
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -431,7 +434,7 @@
         <div>
           <h4 class="font-semibold mb-3">Community</h4>
           <ul class="space-y-2 text-sm text-gray-400">
-            <li><a href="https://x.com/spaboravez" target="_blank" class="hover:text-white">Twitter</a></li>
+            <li><a href="https://x.com/spendbasecards" target="_blank" class="hover:text-white">Twitter</a></li>
             <li><a href="https://t.me/SpendbaseCards" target="_blank" class="hover:text-white">Telegram</a></li>
           </ul>
         </div>
