--- a/card/uphold/index.html
+++ b/card/uphold/index.html
@@ -17,16 +17,19 @@
   <meta property="og:url" content="https://spendbase.cards/card/uphold/">
   <meta property="og:title" content="Uphold Crypto Card Review | 2-4% Cashback">
   <meta property="og:description" content="Uphold is a crypto-native crypto card offering 2-4% cashback in XRP. Custodial solution on Multi-chain with Varies FX fees.">
-  <meta property="og:image" content="https://cdn.brandfetch.io/idtqeCHW1H/theme/light/symbol.svg?c=1bxid64Mup7aczewSAYMX&t=1700844646203">
+  
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@spaboravez">
+  
+  <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/uphold/">
   <meta name="twitter:title" content="Uphold Crypto Card Review | 2-4% Cashback">
   <meta name="twitter:description" content="Uphold is a crypto-native crypto card offering 2-4% cashback in XRP. Custodial solution on Multi-chain with Varies FX fees.">
-  <meta name="twitter:image" content="https://cdn.brandfetch.io/idtqeCHW1H/theme/light/symbol.svg?c=1bxid64Mup7aczewSAYMX&t=1700844646203">
+  <meta property="og:image" content="https://spendbase.cards/og/card/uphold.png">
+  <meta name="twitter:image" content="https://spendbase.cards/og/card/uphold.png">
+  <meta name="twitter:card" content="summary_large_image">
+  
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -403,7 +406,7 @@
         <div>
           <h4 class="font-semibold mb-3">Community</h4>
           <ul class="space-y-2 text-sm text-gray-400">
-            <li><a href="https://x.com/spaboravez" target="_blank" class="hover:text-white">Twitter</a></li>
+            <li><a href="https://x.com/spendbasecards" target="_blank" class="hover:text-white">Twitter</a></li>
             <li><a href="https://t.me/SpendbaseCards" target="_blank" class="hover:text-white">Telegram</a></li>
           </ul>
         </div>
