--- a/card/whitebit-nova/index.html
+++ b/card/whitebit-nova/index.html
@@ -17,16 +17,19 @@
   <meta property="og:url" content="https://spendbase.cards/card/whitebit-nova/">
   <meta property="og:title" content="WhiteBIT Nova Crypto Card Review | Up to 10% Cashback">
   <meta property="og:description" content="WhiteBIT Nova is a crypto-native crypto card offering Up to 10% cashback in WBT. Custodial solution on Exchange with Varies FX fees.">
-  <meta property="og:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/e486f1cc-1112-4264-a108-f6de71a6f800/public">
+  
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@spaboravez">
+  
+  <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/whitebit-nova/">
   <meta name="twitter:title" content="WhiteBIT Nova Crypto Card Review | Up to 10% Cashback">
   <meta name="twitter:description" content="WhiteBIT Nova is a crypto-native crypto card offering Up to 10% cashback in WBT. Custodial solution on Exchange with Varies FX fees.">
-  <meta name="twitter:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/e486f1cc-1112-4264-a108-f6de71a6f800/public">
+  <meta property="og:image" content="https://spendbase.cards/og/card/whitebit-nova.png">
+  <meta name="twitter:image" content="https://spendbase.cards/og/card/whitebit-nova.png">
+  <meta name="twitter:card" content="summary_large_image">
+  
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -418,7 +421,7 @@
         <div>
           <h4 class="font-semibold mb-3">Community</h4>
           <ul class="space-y-2 text-sm text-gray-400">
-            <li><a href="https://x.com/spaboravez" target="_blank" class="hover:text-white">Twitter</a></li>
+            <li><a href="https://x.com/spendbasecards" target="_blank" class="hover:text-white">Twitter</a></li>
             <li><a href="https://t.me/SpendbaseCards" target="_blank" class="hover:text-white">Telegram</a></li>
           </ul>
         </div>
