--- a/card/wirex/index.html
+++ b/card/wirex/index.html
@@ -17,16 +17,19 @@
   <meta property="og:url" content="https://spendbase.cards/card/wirex/">
   <meta property="og:title" content="Wirex Crypto Card Review | 0.5-8% Cashback">
   <meta property="og:description" content="Wirex is a neobank crypto card offering 0.5-8% cashback in WXT. Custodial solution on Multi-chain with 0% FX fees.">
-  <meta property="og:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/bf2ac4c0-5dd7-489d-7a7a-38f351882b00/public">
+  
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@spaboravez">
+  
+  <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/wirex/">
   <meta name="twitter:title" content="Wirex Crypto Card Review | 0.5-8% Cashback">
   <meta name="twitter:description" content="Wirex is a neobank crypto card offering 0.5-8% cashback in WXT. Custodial solution on Multi-chain with 0% FX fees.">
-  <meta name="twitter:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/bf2ac4c0-5dd7-489d-7a7a-38f351882b00/public">
+  <meta property="og:image" content="https://spendbase.cards/og/card/wirex.png">
+  <meta name="twitter:image" content="https://spendbase.cards/og/card/wirex.png">
+  <meta name="twitter:card" content="summary_large_image">
+  
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -446,7 +449,7 @@
         <div>
           <h4 class="font-semibold mb-3">Community</h4>
           <ul class="space-y-2 text-sm text-gray-400">
-            <li><a href="https://x.com/spaboravez" target="_blank" class="hover:text-white">Twitter</a></li>
+            <li><a href="https://x.com/spendbasecards" target="_blank" class="hover:text-white">Twitter</a></li>
             <li><a href="https://t.me/SpendbaseCards" target="_blank" class="hover:text-white">Telegram</a></li>
           </ul>
         </div>
