--- a/card/xapo/index.html
+++ b/card/xapo/index.html
@@ -17,16 +17,19 @@
   <meta property="og:url" content="https://spendbase.cards/card/xapo/">
   <meta property="og:title" content="Xapo Crypto Card Review | 1% Cashback">
   <meta property="og:description" content="Xapo is a onchain crypto card offering 1% cashback in BTC. Custodial solution on Bitcoin with 0% FX fees.">
-  <meta property="og:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/886c5cfb-eee1-4d30-c970-4b226c46c800/public">
+  
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@spaboravez">
+  
+  <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/xapo/">
   <meta name="twitter:title" content="Xapo Crypto Card Review | 1% Cashback">
   <meta name="twitter:description" content="Xapo is a onchain crypto card offering 1% cashback in BTC. Custodial solution on Bitcoin with 0% FX fees.">
-  <meta name="twitter:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/886c5cfb-eee1-4d30-c970-4b226c46c800/public">
+  <meta property="og:image" content="https://spendbase.cards/og/card/xapo.png">
+  <meta name="twitter:image" content="https://spendbase.cards/og/card/xapo.png">
+  <meta name="twitter:card" content="summary_large_image">
+  
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -426,7 +429,7 @@
         <div>
           <h4 class="font-semibold mb-3">Community</h4>
           <ul class="space-y-2 text-sm text-gray-400">
-            <li><a href="https://x.com/spaboravez" target="_blank" class="hover:text-white">Twitter</a></li>
+            <li><a href="https://x.com/spendbasecards" target="_blank" class="hover:text-white">Twitter</a></li>
             <li><a href="https://t.me/SpendbaseCards" target="_blank" class="hover:text-white">Telegram</a></li>
           </ul>
         </div>
